--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "cclargs"]
 	path = cclargs
-	url = git@gitlab.com:philippecarphin/cclargs-autocomplete
+	url = https://gitlab.com/philippecarphin/cclargs-autocomplete
