--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -33,5 +33,8 @@ build:
     - mv gglargs gglargs_${GOOS}_${GOARCH}
   artifacts:
     paths:
+      - build/*.txt
+      - build/*.bash
+      - build/*.sh
       - gglargs_linux*
       - gglargs_darwin*
